<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Mercury</string>
    <string name="title_section1">Section 1</string>
    <string name="title_section2">Section 2</string>
    <string name="title_section3">Section 3</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="action_example">Example action</string>
    <string name="action_settings">Settings</string>
    <string name="login">Login</string>
    <string name="registrati">Registrati</string>
    <string name="nomeUtente">Nome Utente</string>
    <string name="password">Password</string>
    <string name="ripetipassword">Ripeti Password</string>
    <string name="Mail">Mail</string>
    <string name="profilo">Profilo</string>
    <string name="impostazioni">Impostazioni</string>
    <string name="logout">Logout</string>
    <string name="title_activity_inizio">InizioActivity</string>
    <string name="hello_world">Hello world!</string>
    <string name="title_activity_intro">IntroActivity</string>

</resources>
